--- a/src/CRUD-Inicial/Collabby.web/Views/Empleado/Nuevo.cshtml
+++ b/src/CRUD-Inicial/Collabby.web/Views/Empleado/Nuevo.cshtml
@@ -3,3 +3,35 @@
 *@
 @{
 }
+@model Collabby.web.Models.Empleado;
+<div class="row">
+    <div class="col-sm-8 offset-sm-2">
+        <h2>Nuevo Empleado</h2>
+        <form>
+            <div class="mb-3">
+                <label>Nombre Completo</label>
+                <input class="form-control" asp-for="NombreCompleto" type="text" />
+            </div>
+            <div class="mb-3">
+                <label>Correo</label>
+                <input class="form-control" asp-for="Correo" type="text" />
+            </div>
+            <div class="mb-3">
+                <label>Fecha Contrato</label>
+                <input class="form-control" asp-for="FechaContrato" type="text" />
+            </div>
+            <div class="mb-3">
+                <input class="form-check-input" asp-for="Activo" type="checkbox" id="chkActivo" />
+                <label class ="form-check" for="chkActivo">Activo</label>   
+            </div>
+            <div class="mb-3">
+                <button class="btn btn-primary" type="submit">Guardar</button>
+                <a asp-controller="Empleado" asp-action="Lista" class="btn btn-warning">Volver</a>
+
+            </div>
+        </form>
+
+       
+    </div>
+
+</div>
