New Metod for "empleado" and small modifications

--- a/src/CRUD-Inicial/Collabby.web/Views/Empleado/Nuevo.cshtml
+++ b/src/CRUD-Inicial/Collabby.web/Views/Empleado/Nuevo.cshtml
@@ -18,11 +18,11 @@
             </div>
             <div class="mb-3">
                 <label>Fecha Contrato</label>
-                <input class="form-control" asp-for="FechaContrato" type="text" />
+                <input class="form-control" asp-for="FechaContrato" type="date" />
             </div>
             <div class="mb-3">
                 <input class="form-check-input" asp-for="Activo" type="checkbox" id="chkActivo" />
-                <label class ="form-check" for="chkActivo">Activo</label>   
+                <label class ="form-check-label" for="chkActivo">Activo</label>   
             </div>
             <div class="mb-3">
                 <button class="btn btn-primary" type="submit">Guardar</button>
