--- a/src/CRUD-Inicial/Collabby.web/Views/Empleado/Nuevo.cshtml
+++ b/src/CRUD-Inicial/Collabby.web/Views/Empleado/Nuevo.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col-sm-8 offset-sm-2">
         <h2>Nuevo Empleado</h2>
-        <form>
+        <form asp-controller="Empleado" asp-action="Nuevo" method="post">
             <div class="mb-3">
                 <label>Nombre Completo</label>
                 <input class="form-control" asp-for="NombreCompleto" type="text" />
