--- a/src/CRUD-Inicial/Collabby.web/Views/Empleado/Lista.cshtml
+++ b/src/CRUD-Inicial/Collabby.web/Views/Empleado/Lista.cshtml
@@ -29,11 +29,11 @@
                         <td>@item.FechaContrato.ToString("dd/MM/yyyy")</td>
                         <td>@(item.Activo ? "SI": "NO")</td>
                         <td>
-                       @*   <a
-                                asp-
-                            >
-                            Eliminar
-                            </a> *@
+                            <a asp-controller="Empleado" 
+                            asp-action="Editar" 
+                            asp-route-id="@item.IdEmpleado"
+                            class="btn btn-primary">
+                            Editar</a>
 
                         </td>
                     </tr>
