--- a/src/CRUD-Inicial/Collabby.web/Views/Empleado/Lista.cshtml
+++ b/src/CRUD-Inicial/Collabby.web/Views/Empleado/Lista.cshtml
@@ -33,14 +33,15 @@
                                 asp-action="Editar" 
                                 asp-route-id="@item.IdEmpleado"
                                 class="btn btn-primary">
-                                Editar</a>
+                                Editar
+                            </a>
 
                             <a asp-controller="Empleado"
                                asp-action="Eliminar"
                                asp-route-id="@item.IdEmpleado"
                                onclick="return confirmar()"
                                class="btn btn-danger">
-                                Eliminar
+                               Eliminar
                             </a>
 
                         </td>
